Change 'code' color

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 }
 
 .container .box span i:nth-child(1) {
-  color: #5c5fc4;
+  color: #5fc45c;
 }
 
 .container .box span i:nth-child(2) {
